[package]
name = "adder"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"
repository = "https://github.com/dj8yfo/near-sdk-rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { path = "../../near-sdk" }

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:cargo-near-commit"
image_digest = "sha256:5352c9450a08da7bf370e717fa746cdc62484b5ef8f810c78df73fac8874fc50"
container_build_command = ["cargo", "near", "build"]
source_code_git_url = "https://github.com/Canvinus/near-sdk-rs.git"

[dev-dependencies]
near-workspaces = "0.10.1"
tokio = { version = "1.14", features = ["full"] }
anyhow = "1.0"
near-abi = "0.4.0"
zstd = "0.11"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
